<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:src="@drawable/flight_seat" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="158dp"
        android:onClick="meth_exe"
        android:text="@string/btn_seat11"
        android:background="@color/Yellow"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignTop="@+id/button3"
        android:layout_marginTop="64dp"
        android:background="@color/Yellow"
        android:onClick="Business"
        android:text="@string/btn_seat2"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/Yellow"
        android:onClick="Economy"
        android:text="@string/btn_seat3"
        android:textStyle="bold" />

</RelativeLayout>